# newswriter_agent

./: README.md  pyproject.toml
news/: 2025-06-22_15-31_news_article.md
src/news_writer/: crew.py  main.py
src/news_writer/config/: agents.yaml  tasks.yaml
src/news_writer/tools/: email_tool.py
