[project]
name = "new_project"
version = "0.1.0"
description = "new_project using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0"
]

[project.scripts]
news_writer = "news_writer.main:run"
run_crew = "news_writer.main:run"
train = "news_writer.main:train"
replay = "news_writer.main:replay"
test = "news_writer.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
